added reverse function for list view + added selectedIndex for mat-group

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 </mat-toolbar>
 
 <div class="container mt-4">
-  <mat-tab-group>
+  <mat-tab-group [(selectedIndex)]="selectedTab">
     <mat-tab label="Dashboard">
       <div class="row mb-4">
         <h2 class="mb-4 mt-4">Dashboard</h2>
